    marked as deprecated.  The l_text field has been changed from uint32_t
    to size_t, to allow for very large headers in SAM files.  The text
    and l_text fields have been left for backwards compatibility, but
    should not be accessed directly in code that uses the new header API.
    To access the header text, the new functions sam_hdr_length() and
    sam_hdr_str() should be used instead.

  - bcf_index_load() no longer tries the '.tbi' suffix when looking for
    BCF index files (.tbi indexes are for text files, not binary BCF).

* A new SAM/BAM/CRAM header API has been added to HTSlib, allowing header
  data to be updated without having to parse or rewrite large parts of the
  header text.  See htslib/sam.h for function definitions and documentation.

  The header typedef and several pre-existing functions have been renamed
  to have a sam_hdr_ prefix: sam_hdr_t, sam_hdr_init(), sam_hdr_destroy(),
  and sam_hdr_dup().  (The existing bam_hdr_-prefixed names are still
  provided for compatibility with existing code.)

* SAM format reading and writing is now much faster.  Compared to revision 1.9,
  reading uncompressed SAM may be up to 100% faster; writing up to 80%.  The
  exact improvement depends on which compiler options are used and the
  nature of the SAM file itself.

  The results of parsing invalid SAM files may change due to this update.
  For example some records where the QUAL string is shorter than SEQ
  may report "invalid QUAL character" instead of "SEQ and QUAL are of
  different length".

* New API functions hts_reglist_create() and sam_itr_regarray() are added
  to create hts_reglist_t region lists from `chr:<from>-<to>` type region
  specifiers.

* An improved region parsing function hts_parse_region() is added.  This
  is designed to help deal with ambiguities that arise when reference names
  contain colons followed by numbers.  It does this by checking possible